Project

General

Profile

Actions

Bug #16134

closed

Compilation error on x86_64-cygwin

Bug #16134: Compilation error on x86_64-cygwin

Added by fd0 (Daisuke Fujimura) about 7 years ago. Updated about 7 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.7.0dev (2019-09-02T20:42:31Z master 1994adf938) [x86_64-cygwin]
[ruby-core:94751]

Description

Compilation error on x86_64-cygwin.

make[2]: Entering directory '/tmp/ruby-git/ruby/ext/-test-/arith_seq/extract'
linking shared-object -test-/arith_seq/extract.so
extract.o: In function `Init_extract':
/tmp/ruby-git/ruby/ext/-test-/arith_seq/extract/extract.c:26:(.text+0xfc): relocation truncated to fit: R_X86_64_PC32 against undefined symbol `rb_define_singleton_method'
collect2: error: ld returned 1 exit status
make[2]: *** [Makefile:267: ../../../../.ext/x86_64-cygwin/-test-/arith_seq/extract.so] Error 1
make[2]: Leaving directory '/tmp/ruby-git/ruby/ext/-test-/arith_seq/extract'
make[1]: *** [exts.mk:97: ext/-test-/arith_seq/extract/all] Error 2
make[1]: Leaving directory '/tmp/ruby-git/ruby'
make: *** [uncommon.mk:293: build-ext] Error 2
rm cygruby270.rc

Files

cygwin.patch (1.73 KB) cygwin.patch fd0 (Daisuke Fujimura), 09/03/2019 01:40 AM

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #1

  • Status changed from Open to Closed
  • Backport changed from 2.5: UNKNOWN, 2.6: UNKNOWN to 2.5: DONTNEED, 2.6: DONTNEED
Actions

Also available in: PDF Atom