Disable method definition type checks on Cygwin too

[Bug #16134]